--- a/homepage.css
+++ b/homepage.css
@@ -1,11 +1,41 @@
-.MAIN {
-    background: lightblue;
-    text-align: center;
-    color: BLACK;
-    font-family: "Verdana";
-    font-family: "Arial";
-    font-size: 40px;
-    font-weight: bold;
-    font-style: italic;
+@import url('https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 
+* {
+    margin: 0px;
+
+}
+
+.main {
+    background-color: orange;
+    height: 100vh;
+    width: 100vw;
+    color: white;
+    font-family: Roboto;
+    margin: 0px;
+
+
+}
+
+.main {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+
+}
+
+.main2 {
+
+    align-items: center;
+    align-self: center;
+}
+
+.image {
+    height: 400px;
+    width: 600px;
+    margin-left: 10px;
+}
+
+.div2 {
+    align-self: center;
 }
